--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <link rel="icon" type="image/png" href="./images/candy.png" />
     </head>
     <body
-        class="bg-[url('./images/img.png')] bg-cover bg-center bg-no-repeat bg-fixed min-h-screen overflow-y-auto"
+        class="bg-[url('./images/bg.jpg')] bg-cover bg-center bg-no-repeat bg-fixed min-h-screen overflow-y-auto"
     >
         <div
             class="relative z-10 flex items-center justify-center min-h-screen py-8"
