--- a/index.html
+++ b/index.html
@@ -106,5 +106,6 @@
         </div>
 
         <script type="module" src="./script.js"></script>
+        <script src="confetti.js"></script>
     </body>
 </html>
